# lib-cmp

./: .gitignore  .gitmodules  README.md  build.sh
build-repo/: CMakeLists.txt
build-source/: CMakeLists.txt
src/: main.cpp
src/dot/: select.hpp
src/dot/openblas/: def.hpp  select.hpp
src/gemv/: select.hpp
src/gemv/openblas/: def.hpp  select.hpp
